2007-05-10  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.91 ==

2007-05-10  Andy Wingo  <wingo@pobox.com>

	* VERSION: Bumped to 2.15.91.

2007-05-06  Andy Wingo  <wingo@pobox.com>

	* examples/example-1.scm: Put in a modeline.

	* gnome/gw/support/gobject.scm (find-type-rule): Look up type
	rules recursively, fixes a very old bug in which out parameters
	are only recognized automatically within the same wrapset that
	defines the rule.

	* gnome/gw/glib-spec.scm (initialize): Fix char* being marked for
	automatic 'out aliasing.

2007-05-05  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/support/gobject.scm: New export, lookup-type-by-alias.
	(add-type-alias!): Simplify.
	(lookup-type-by-alias): Renamed from lookup-type, which was a name
	collision with g-wrap.scm, which confused me for quite some time.
	(add-type-rule!, find-type-rule): Simplify so that a type rule is
	simply a string, which maps to a g-wrap typespec as a list of
	symbols.

	* gnome/gw/support/defs.scm (type-lookup): Always return a list;
	lists are always valid as typespecs on the g-wrap side.
	(construct-argument-list): Simplify (?), assuming that type-lookup
	gives us a list, and for the update in type rules. Removes
	theoretical ability for multiple C arguments to be given from one
	Scheme object, but that wasn't used, and if it goes in again some
	documentation would be good. (This capability still exists via
	custom wrappers.)
	(load-defs): lookup-type-by-alias, not lookup-type.

	* gnome/gw/glib-spec.scm (initialize): Add "out" type aliases for
	all scalar types for which it makes sense. gunichar is a guint32.

2007-05-04  Andy Wingo  <wingo@pobox.com>

	* gnome/gobject/gvalue.h: New public function,
	scm_c_register_gtype_instance_gvalue_wrappers. Long name!

	* gnome/gobject/gvalue.c
	(scm_c_register_gtype_instance_gvalue_wrappers)
	(scm_gvalue_to_scm, scm_gvalue_primitive_set, scm_c_gvalue_to_scm)
	(scm_scm_to_gvalue): Handle GTypeInstances in GValues via a